@@ -30,15 +30,15 @@ import org.springframework.transaction.annotation.Transactional;
 @Component(value="sysRoleService")
 @Scope(value="singleton")
 public class SysRoleService extends BaseAnnotationJdbcService<SysRole, Long> implements IBaseAnnotationJdbcService<SysRole,Long> {
-	@Transactional(propagation= Propagation.REQUIRED,noRollbackFor=RuntimeException.class)
+	@Transactional(propagation= Propagation.REQUIRED,rollbackFor=RuntimeException.class)
 	public void saveRoleRigth(String[] ids,String resId) throws ServiceException {
 		try{
-			this.getJdbcDao().deleteByField(SysResourceRole.class, "resId", new Long(resId));
+			this.getJdbcDao().deleteByField(SysResourceRole.class, "resId", Long.valueOf(resId));
 			for (int i = 0; i < ids.length; i++) {
 				if(!ids[i].equals("")){
 					SysResourceRole resRole=new SysResourceRole();
-					resRole.setResId(new Integer(resId));
-					resRole.setRoleId(new Integer(ids[i]));
+					resRole.setResId(Integer.valueOf(resId));
+					resRole.setRoleId(Integer.valueOf(ids[i]));
 					resRole.setStatus("1");
 					this.getJdbcDao().createVO(resRole);
 				}
